// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PromsDetail /> should renders correctly with different state of props 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "promPanel": false,
        }
      }
      isOpen={false}
      isShowControlPanel={true}
      name="promPanel"
      title="PROM"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Name of PROM
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <RecordsOfTableView />
            <FormTitle
              text="Specific Question"
            />
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    1. In general, would you say your health is:
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    2. Compared to one year ago, how would you rate your health in general now?
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    3. Does your health now limit you in vigorous activities?
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    4. Does your health now limit you in moderate activities?
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  5. Does your health now limit you in lifting or carrying groceries?
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <FormTitle
              text="General Score"
            />
            <div
              className="form-group"
            >
              <div>
                Pain severity on a scale of 0 to 100, where 0 indicates no pain and 100 indicates severe pain.
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="highlighter-input-group highlighter-wrapper"
                >
                  <span
                    className="highlighter-undefined"
                  />
                  <label
                    className="control-label"
                  >
                    Score
                  </label>
                  <div
                    className="input-holder highlighter-input-holder undefined"
                  >
                    <div
                      className="form-control input-sm"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    03-Oct-2017
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <PromsDetail /> should renders correctly with different state of props 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "promPanel": true,
        }
      }
      isBtnShowPanel={true}
      isOpen={false}
      isShowControlPanel={true}
      name="promPanel"
      title="Edit PROM"
    >
      <ReduxForm
        detail={
          Object {
            "author": "DR Mary Jones",
            "dateCreated": 1482170593395,
            "name": "test Proms 1",
            "procedureSourceId": "testSourceID1",
            "records": Array [
              Object {
                "date": "01-Feb-2018",
                "name": "123b",
                "source": "ethercis",
                "sourceId": "08102813-e8d0-4f45-aa95-ac0d633e69fd",
                "type": "procedures",
                "typeTitle": "Procedures",
              },
            ],
            "score": "90",
            "source": "openehr",
            "sourceId": "testSourceID1",
            "specific_q1": "at0009",
            "specific_q2": "at0015",
            "specific_q3": "at0021",
            "specific_q4": "at0025",
            "specific_q5": "at0030",
          }
        }
        match={
          Object {
            "params": Object {
              "userId": "9999999000",
            },
          }
        }
      />
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <PromsDetail /> should renders with props correctly 1`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "promPanel": false,
        }
      }
      isOpen={false}
      isShowControlPanel={true}
      name="promPanel"
      title="PROM"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Name of PROM
                  </label>
                  <div
                    className="form-control-static"
                  >
                    test Proms 1
                  </div>
                </div>
              </div>
            </div>
            <RecordsOfTableView
              records={
                Array [
                  Object {
                    "date": "01-Feb-2018",
                    "name": "123b",
                    "source": "ethercis",
                    "sourceId": "08102813-e8d0-4f45-aa95-ac0d633e69fd",
                    "type": "procedures",
                    "typeTitle": "Procedures",
                  },
                ]
              }
            />
            <FormTitle
              text="Specific Question"
            />
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    1. In general, would you say your health is:
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Excellent
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    2. Compared to one year ago, how would you rate your health in general now?
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Much better
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    3. Does your health now limit you in vigorous activities?
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Yes, limited a lot
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    4. Does your health now limit you in moderate activities?
                  </label>
                  <div
                    className="form-control-static"
                  >
                    Yes, limited a lot
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  5. Does your health now limit you in lifting or carrying groceries?
                </label>
                <div
                  className="form-control-static"
                >
                  Yes, limited a lot
                </div>
              </div>
            </div>
            <FormTitle
              text="General Score"
            />
            <div
              className="form-group"
            >
              <div>
                Pain severity on a scale of 0 to 100, where 0 indicates no pain and 100 indicates severe pain.
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="highlighter-input-group highlighter-wrapper"
                >
                  <span
                    className="highlighter-undefined"
                  />
                  <label
                    className="control-label"
                  >
                    Score
                  </label>
                  <div
                    className="input-holder highlighter-input-holder undefined"
                  >
                    <div
                      className="form-control input-sm"
                    >
                      90
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    19-Dec-2016
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  >
                    openehr
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;

exports[`Component <PromsDetail /> should renders with props correctly 2`] = `
<div
  className="section-detail"
>
  <div
    className="panel-group accordion"
  >
    <PluginDetailPanel
      editedPanel={
        Object {
          "promPanel": false,
        }
      }
      isOpen={false}
      isShowControlPanel={true}
      name="promPanel"
      title="PROM"
    >
      <div
        className="panel-body-inner"
      >
        <div
          className="form"
        >
          <div
            className="form-group-wrapper"
          >
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Name of PROM
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <RecordsOfTableView />
            <FormTitle
              text="Specific Question"
            />
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    1. In general, would you say your health is:
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    2. Compared to one year ago, how would you rate your health in general now?
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    3. Does your health now limit you in vigorous activities?
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    4. Does your health now limit you in moderate activities?
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
            <div
              className="col-expand-right"
            >
              <div
                className="form-group"
              >
                <label
                  className="control-label"
                >
                  5. Does your health now limit you in lifting or carrying groceries?
                </label>
                <div
                  className="form-control-static"
                />
              </div>
            </div>
            <FormTitle
              text="General Score"
            />
            <div
              className="form-group"
            >
              <div>
                Pain severity on a scale of 0 to 100, where 0 indicates no pain and 100 indicates severe pain.
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="highlighter-input-group highlighter-wrapper"
                >
                  <span
                    className="highlighter-undefined"
                  />
                  <label
                    className="control-label"
                  >
                    Score
                  </label>
                  <div
                    className="input-holder highlighter-input-holder undefined"
                  >
                    <div
                      className="form-control input-sm"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="row-expand"
            >
              <div
                className="col-expand-left"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Date
                  </label>
                  <div
                    className="form-control-static"
                  >
                    01-Feb-2018
                  </div>
                </div>
              </div>
              <div
                className="col-expand-right"
              >
                <div
                  className="form-group"
                >
                  <label
                    className="control-label"
                  >
                    Source
                  </label>
                  <div
                    className="form-control-static"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </PluginDetailPanel>
  </div>
</div>
`;
